在微服务中加入了feign和sentinel，修复了移动端搜索页，订单详情商品信息等一些页面优化